# metagate

metagate-agent/: main.py  pyproject.toml
metagate-agent/src/agents/flexer/: README.md
metagate-ops/metagate-search/: pyproject.toml
metagate-platform/metagate-desktop/: Cargo.toml  README.md
metagate-platform/metagate-desktop/src-tauri/: Cargo.toml  tauri.conf.json
metagate-platform/metagate-desktop/src-tauri/src/: lib.rs  main.rs
metagate-platform/metagate-desktop/src-tauri/src/fs/: menu.rs
metagate-platform/metagate-search/: main.py  pyproject.toml
metagate-platform/metagate-studio/server/: pyproject.toml
metagate-platform/metagate/client/: README.md
metagate-platform/metagate/client/src/components/navigator/: gnb.tsx
metagate-platform/metagate/client/src/pages/: home.tsx  login.tsx  registration.tsx
metagate-platform/metagate/server/: .gitignore  docker-compose.yml  env.develop  pyproject.toml
metagate-platform/metagate/server/src/: bootstrap.py  main.py
metagate-platform/metagate/server/src/infrastructure/cache/: __init__.py  config.py  redis_client.py
metagate-platform/metagate/server/src/infrastructure/database/: __init__.py  config.py  session.py
metagate-platform/metagate/server/src/infrastructure/database/postgres/: config.py
metagate-platform/metagate/server/src/infrastructure/database/redis/: config.py
metagate-platform/metagate/server/src/infrastructure/logger/: __init__.py  config.py  logger.py
metagate-platform/metagate/server/src/infrastructure/nats/: __init__.py  client.py  config.py
metagate-platform/metagate/server/src/infrastructure/prometheus/: __init__.py  config.py  metrics.py
metagate-platform/metagate/server/src/infrastructure/security/: token.py
metagate-platform/metagate/server/src/infrastructure/sentry/: __init__.py  client.py  config.py
metagate-platform/metagate/server/src/infrastructure/utils/: response_model.py
metagate-platform/metagate/server/src/modules/organization/core/: command.py  entity.py  query.py
metagate-platform/metagate/server/src/modules/organization/interface/: adapter.py  organization.py
metagate-platform/metagate/server/src/modules/project/core/: command.py  entity.py  query.py  repository.py  value.py
metagate-platform/metagate/server/src/modules/project/infrastructure/: repository.py
metagate-platform/metagate/server/src/modules/project/interface/: adapter.py  project.py
metagate-platform/metagate/server/src/modules/project/interface/adapter/: project_schema.py
metagate-platform/metagate/server/src/modules/project/interface/router/: project.py
metagate-platform/metagate/server/src/modules/user/core/: command.py  entity.py  event.py  query.py  repository.py  service.py  value.py
metagate-platform/metagate/server/src/modules/user/infrastructure/repository/: repository.py
metagate-platform/metagate/server/src/modules/user/interface/: adapter.py  admin.py  auth.py  license.py  oauth.py  user.py
metagate-platform/metagate/server/src/modules/user/interface/router/: auth.py  user.py
metagate-platform/metagate/server/src/modules/workflow/interface/: workspace.py
metagate-platform/metagate/server/src/modules/workspace/core/: command.py  entity.py  query.py  repository.py  value.py
metagate-platform/metagate/server/src/modules/workspace/infrastructure/: repository.py
metagate-platform/metagate/server/src/modules/workspace/interface/: adapter.py  workspace.py
